--- a/PluginNowPlayingPlex.csproj
+++ b/PluginNowPlayingPlex.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>C:\Users\Damien\AppData\Roaming\Rainmeter\Plugins\</OutputPath>
+    <OutputPath>x64\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;X64</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
